[gd_scene load_steps=58 format=2]

[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/vision_system.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/sensors.gd" type="Script" id=3]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/animator.gd" type="Script" id=4]
[ext_resource path="res://assets/sound_effects/wav/DetectedFinal.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/animations/NonExistent/idle/idle_idle_0.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/NonExistent/idle/idle_idle_1.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/NonExistent/walk/walk_walk_0.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/NonExistent/walk/walk_walk_1.png" type="Texture" id=9]
[ext_resource path="res://assets/animations/NonExistent/walk/walk_walk_2.png" type="Texture" id=10]
[ext_resource path="res://assets/animations/NonExistent/walk/walk_walk_3.png" type="Texture" id=11]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_0.png" type="Texture" id=12]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_1.png" type="Texture" id=13]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_2.png" type="Texture" id=14]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_3.png" type="Texture" id=15]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_4.png" type="Texture" id=16]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_5.png" type="Texture" id=17]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_6.png" type="Texture" id=18]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_7.png" type="Texture" id=19]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_8.png" type="Texture" id=20]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_9.png" type="Texture" id=21]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_10.png" type="Texture" id=22]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_11.png" type="Texture" id=23]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_12.png" type="Texture" id=24]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_13.png" type="Texture" id=25]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_14.png" type="Texture" id=26]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_15.png" type="Texture" id=27]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_16.png" type="Texture" id=28]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_17.png" type="Texture" id=29]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_18.png" type="Texture" id=30]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_19.png" type="Texture" id=31]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_20.png" type="Texture" id=32]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_21.png" type="Texture" id=33]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_22.png" type="Texture" id=34]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_23.png" type="Texture" id=35]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_24.png" type="Texture" id=36]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_25.png" type="Texture" id=37]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_26.png" type="Texture" id=38]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_27.png" type="Texture" id=39]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_28.png" type="Texture" id=40]
[ext_resource path="res://assets/animations/NonExistent/detect_particles/detect_29.png" type="Texture" id=41]
[ext_resource path="res://assets/light_textures/red_eye.png" type="Texture" id=42]
[ext_resource path="res://addons/fsm/fsm.gd" type="Script" id=43]
[ext_resource path="res://addons/fsm/icon.png" type="Texture" id=44]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/states/idle.gd" type="Script" id=45]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/states/detection.gd" type="Script" id=46]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/states/follow.gd" type="Script" id=47]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/states/aggro_wait.gd" type="Script" id=48]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/states/search.gd" type="Script" id=49]
[ext_resource path="res://src/actors/shadow actors/FSM shadows/sciripts/states/walk_away.gd" type="Script" id=50]

[sub_resource type="Animation" id=1]
resource_name = "detect"
length = 1.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35, 0.5, 1.2, 1.4 ),
"transitions": PoolRealArray( 2, 0.5, 2, 0.5, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, -2 ), Vector2( 0, -4 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("particles:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.35, 0.5, 1.2, 1.4 ),
"transitions": PoolRealArray( 2, 0.5, 2, 0.5, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, -23 ), Vector2( 0, -27 ), Vector2( 0, -25 ), Vector2( 0, -27 ), Vector2( 0, -27 ), Vector2( 0, -23 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("eyes:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.35, 0.5, 1.2, 1.4 ),
"transitions": PoolRealArray( 2, 0.5, 2, 0.5, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, -2 ), Vector2( 0, -4 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("eyes/eye_left:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 2, 0.5, 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 0.156863 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("eyes/eye_right:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 2, 0.5, 0.5, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 0.156863 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("eyes/left_glow:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 1.2, 1.25, 1.3, 1.4 ),
"transitions": PoolRealArray( 2, 0.5, 1, 0.5, 1, 0.5, 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ 0.01, 1.0, 0.01, 1.0, 0.01, 1.0, 1.0, 0.01, 1.0, 0.5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("eyes/right_glow:energy")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.35, 0.4, 1.2, 1.25, 1.3, 1.4 ),
"transitions": PoolRealArray( 2, 0.5, 1, 0.5, 1, 0.5, 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ 0.01, 1.0, 0.01, 1.0, 0.01, 1.0, 1.0, 0.01, 1.0, 0.5 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("sounds")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("sounds:stream")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.14355 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "follow"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("eyes/eye_left:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.156863 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eyes/eye_right:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.156863 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("eyes/left_glow:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("eyes/right_glow:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("sprite:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("sprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("eyes:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("particles:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -23 ), Vector2( 0, -22 ), Vector2( 0, -23 ), Vector2( 0, -24 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("particles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -23 ), Vector2( 0, -22 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("particles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -23 ), Vector2( 0, -22 ), Vector2( 0, -23 ), Vector2( 0, -24 ) ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "floating",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 8 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
movement_speed = 75.0
idle_wait_time = 1.2

[node name="vision_system" parent="." instance=ExtResource( 2 )]
position = Vector2( 1, -11 )

[node name="sensors" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="front_ground" type="RayCast2D" parent="sensors"]
position = Vector2( 14, -2 )
z_index = 15
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 4

[node name="front_wall" type="RayCast2D" parent="sensors"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 4

[node name="animator" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="animator"]
anims/detect = SubResource( 1 )
anims/follow = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="sprite" type="AnimatedSprite" parent="animator"]
position = Vector2( 0, -2.88889 )
frames = SubResource( 5 )
animation = "walk"
frame = 3
offset = Vector2( 0, -10 )

[node name="particles" type="AnimatedSprite" parent="animator"]
position = Vector2( 0, -25.8889 )
scale = Vector2( 0.16, 0.16 )
frames = SubResource( 6 )
animation = "floating"
frame = 11
playing = true

[node name="eyes" type="Node2D" parent="animator"]
editor/display_folded = true
position = Vector2( 0, -2.88889 )

[node name="eye_left" type="Sprite" parent="animator/eyes"]
modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( 3, -11 )
texture = ExtResource( 42 )

[node name="eye_right" type="Sprite" parent="animator/eyes"]
modulate = Color( 1, 1, 1, 0.313726 )
position = Vector2( 0, -11 )
texture = ExtResource( 42 )

[node name="left_glow" type="Light2D" parent="animator/eyes"]
position = Vector2( 4, -11 )
texture = ExtResource( 42 )
texture_scale = 0.7

[node name="right_glow" type="Light2D" parent="animator/eyes"]
position = Vector2( -1.2, -11 )
texture = ExtResource( 42 )
texture_scale = 0.7

[node name="sounds" type="AudioStreamPlayer2D" parent="animator"]
position = Vector2( 0, -10 )
stream = ExtResource( 5 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="FSM" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 43 )
__meta__ = {
"_editor_icon": ExtResource( 44 )
}
USE_PHYSICS_PROCESS = true
INIT_STATE = "idle"
DISCONNECT_INACTIVE_STATES = true

[node name="idle" type="Node" parent="FSM"]
editor/display_folded = true
script = ExtResource( 45 )

[node name="wait" type="Timer" parent="FSM/idle"]
one_shot = true

[node name="detection" type="Node" parent="FSM"]
script = ExtResource( 46 )

[node name="follow" type="Node" parent="FSM"]
script = ExtResource( 47 )

[node name="aggro_wait" type="Node" parent="FSM"]
editor/display_folded = true
script = ExtResource( 48 )

[node name="aggro_timer" type="Timer" parent="FSM/aggro_wait"]
one_shot = true

[node name="search" type="Node" parent="FSM"]
script = ExtResource( 49 )

[node name="walk_away" type="Node" parent="FSM"]
script = ExtResource( 50 )
[connection signal="out_of_vision" from="vision_system" to="FSM/walk_away" method="_on_vision_system_out_of_vision"]
[connection signal="animation_finished" from="animator" to="FSM/detection" method="_on_animator_animation_finished"]
[connection signal="looking_left" from="animator" to="sensors" method="_on_animator_looking_left"]
[connection signal="looking_right" from="animator" to="sensors" method="_on_animator_looking_right"]
[connection signal="animation_finished" from="animator/AnimationPlayer" to="animator" method="animation_finished"]
[connection signal="timeout" from="FSM/idle/wait" to="FSM/idle" method="_on_wait_timeout"]
[connection signal="timeout" from="FSM/aggro_wait/aggro_timer" to="FSM/aggro_wait" method="_on_aggro_timer_timeout"]
